[package]
name = "worked-today"
version = "1.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
clap = { version = "4.0.29", features = ["derive"] }
csv = "1.1.6"
num-traits = "0.2.15"
serde = { version = "1.0.150", features = ["derive"] }
termcolor = "1.1.3"
